<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <!-- GCM -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_gcm"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/messaging_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/send_message_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_message" />

        <!-- Sign In -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/title_google_sign_in"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sign_in_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_signed_out" />

        <LinearLayout
            android:id="@+id/layout_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- SignInButton will be injected here -->

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out" />
        </LinearLayout>

        <!-- App Invites -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/title_app_invites"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/app_invites_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/send_invites_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_invites" />

        <!-- SmartLock -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/title_smart_lock"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/smartlock_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/field_smartlock_username"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username" />

            <EditText
                android:id="@+id/field_smartlock_password"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_smartlock_load"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smartlock_load" />

            <Button
                android:id="@+id/button_smartlock_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smartlock_save" />

            <Button
                android:id="@+id/button_smartlock_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smartlock_delete" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>